--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -8,3 +8,13 @@
   box-sizing: border-box;
   scroll-behavior: smooth;
 }
+
+input::-webkit-inner-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
