reset password APIs integration

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -18,3 +18,7 @@ input::-webkit-inner-spin-button {
 input[type="number"] {
   -moz-appearance: textfield;
 }
+
+.error {
+  width: calc(50% - theme(spacing.2));
+}
