dashboard page and products pages APIs integration

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -22,3 +22,11 @@ input[type="number"] {
 .error {
   width: calc(50% - theme(spacing.2));
 }
+
+.sidebar {
+  height: calc(100% - 60px);
+}
+
+/* .stock {
+  width: calc(100% - theme(spacing.10));
+} */
