--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -27,6 +27,10 @@ input[type="number"] {
   height: calc(100% - 60px);
 }
 
+.reviews {
+  width: calc(100% + 15px);
+}
+
 /* .stock {
   width: calc(100% - theme(spacing.10));
 } */
