--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -33,6 +33,11 @@ input[type="number"] {
 .noReviews {
   width: calc(100% + 17px);
 }
+.dash-load {
+  width: 100%;
+  padding-left: 20%;
+  height: 100vh;
+}
 
 
 /* .stock {
